Update post.html and head.html
Move custom stylesheet ref to global head file

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,7 @@
     <meta name="author" content="{{ site.author | escape }}">
 {%- endif -%}
 
+<link rel="stylesheet" href="assets/css/custom.css">
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/style.css">
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-fontsettings/website.css">
 <!-- <link rel="stylesheet" href="../gitbook/gitbook-plugin-search/search.css"> -->
