--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en" >
     <head>
-        <link rel="stylesheet" href="assets/css/custom.css">
+        <!-- <link rel="stylesheet" href="assets/css/custom.css"> -->
         
         {%- include head.html -%}
 
