--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,9 +9,10 @@
 <script src="../gitbook/gitbook-plugin-search/search-engine.js"></script>
 <script src="../gitbook/gitbook-plugin-search/search.js"></script> -->
 
-
-<div style="font-size:50%;">
-    The original text <a href="https://pl.wikisource.org/wiki/Na_srebrnym_globie">Na Srebrnym Globie</a> by <a href="https://pl.wikisource.org/wiki/Autor:Jerzy_%C5%BBu%C5%82awski">Jerzy Żuławski</a> is <a href="https://pl.wikipedia.org/wiki/Domena_publiczna">public domain</a>.
-    <br>
-    The translation of the text is free under <a href="http://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License 3.0</a>. Copyright 2021 dew0011
-</div>
+<body>
+  <div style="font-size:50%;">
+      The original text <a href="https://pl.wikisource.org/wiki/Na_srebrnym_globie">Na Srebrnym Globie</a> by <a href="https://pl.wikisource.org/wiki/Autor:Jerzy_%C5%BBu%C5%82awski">Jerzy Żuławski</a> is <a href="https://pl.wikipedia.org/wiki/Domena_publiczna">public domain</a>.
+      <br>
+      The translation of the text is free under <a href="http://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License 3.0</a>. Copyright 2021 dew0011
+  </div>
+</body>
