--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,76 +1,54 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html lang="en" >
+    <head>
+        <!-- <link rel="stylesheet" href="assets/css/custom.css"> -->
+        
+        {%- include head.html -%}
 
-<head>
-    <!-- <link rel="stylesheet" href="assets/css/custom.css"> -->
+        {% if page.previous %}
+            <link rel="prev" href="{{site.baseurl}}{{page.previous.url}}" />
+        {% else %}
+            <link rel="prev" href="{{site.baseurl}}/" />
+        {% endif %}
 
-    {%- include head.html -%}
+        {% if page.next %}
+            <link rel="next" href="{{site.baseurl}}{{page.next.url}}" />
+        {% endif %}
+    </head>
+    <body>
+        <div class="book translate">
 
-    {% if page.previous %}
-    <link rel="prev" href="{{site.baseurl}}{{page.previous.url}}" />
-    {% else %}
-    <link rel="prev" href="{{site.baseurl}}/" />
-    {% endif %}
+            {%- include toc-date.html -%}
 
-    {% if page.next %}
-    <link rel="next" href="{{site.baseurl}}{{page.next.url}}" />
-    {% endif %}
-</head>
+            <div class="book-body">
+                {%- include body.html -%}
 
-<body>
-    <div class="book translate">
+                {% if page.previous %}
+                    <a href="{{site.baseurl}}{{page.previous.url}}" class="navigation navigation-prev navigation-unique" aria-label="Previous page: {{page.previous.title}}">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
+                {% else %}
+                    <a href="{{site.baseurl}}/" class="navigation navigation-prev navigation-unique" aria-label="Previous page: {{site.title}}">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
+                {% endif %}
 
-        {%- include toc-date.html -%}
+                {% if page.next %}
+                    <a href="{{site.baseurl}}{{page.next.url}}" class="navigation navigation-next navigation-unique" aria-label="Next page: {{page.next.title}}">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
+                {% endif %}
+            </div>
 
-        <div class="book-body">
-            {%- include body.html -%}
-
-            {% if page.previous %}
-            <a href="{{site.baseurl}}{{page.previous.url}}" class="navigation navigation-prev navigation-unique"
-                aria-label="Previous page: {{page.previous.title}}">
-                <i class="fa fa-angle-left"></i>
-            </a>
-            {% else %}
-            <a href="{{site.baseurl}}/" class="navigation navigation-prev navigation-unique"
-                aria-label="Previous page: {{site.title}}">
-                <i class="fa fa-angle-left"></i>
-            </a>
-            {% endif %}
-
-            {% if page.next %}
-            <a href="{{site.baseurl}}{{page.next.url}}" class="navigation navigation-next navigation-unique"
-                aria-label="Next page: {{page.next.title}}">
-                <i class="fa fa-angle-right"></i>
-            </a>
-            {% endif %}
+            <script>
+            var gitbook = gitbook || [];
+            gitbook.push(function() {
+                gitbook.page.hasChanged({%- include metadata-post.json.tpl -%});
+            });
+            </script>
         </div>
 
-        <script>
-            var gitbook = gitbook || [];
-            gitbook.push(function () {
-                gitbook.page.hasChanged({% - include metadata - post.json.tpl -%});
-            });
+        {%- include footer.html -%}
 
-            $('body').on('touchstart', function() {});
-            
-            // $('ul li.has-children').on("touchstart", function (e) {
-            //     'use strict'; //satisfy code inspectors
-            //     var link = $(this); //preselect the link
-            //     if (link.hasClass('hover')) {
-            //         return true;
-            //     }
-            //     else {
-            //         link.addClass('hover');
-            //         $('ul > li').not(this).removeClass('hover');
-            //         e.preventDefault();
-            //         return false; //extra, and to make sure the function has consistent return points
-            //     }
-            // });
-        </script>
-    </div>
-
-    {%- include footer.html -%}
-
-</body>
-
+    </body>
 </html>
