--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,6 +46,9 @@
                 gitbook.page.hasChanged({%- include metadata-post.json.tpl -%});
             });
             </script>
+            <script>
+                $('body').on('touchstart', function() {});
+            </script>
         </div>
 
         {%- include footer.html -%}
