--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -18,16 +18,40 @@ img {
     [title] {
       position: relative;
       display: inline-flex;
-      justify-content: center;
+      justify-content: center; 
+    }
+    [title]:focus {
+      color: seagreen; 
     }
     [title]:focus::after {
       content: attr(title);
       position: absolute;
-      top: 90%;
-      color: #000;
-      background-color: #fff;
+      top: 100%;
+      color: black;
+      background-color: white;
       border: 1px solid;
       width: fit-content;
       padding: 3px;
+      z-index: 10;     
     }
+    /* h3[title] {
+        color: red;
+        position: relative;
+        display: inline-flex;
+        justify-content: center; 
+      }
+      h3[title]:focus::after {
+        color: seagreen;
+      }
+      h3[title]:focus::after {
+          content: attr(title);
+          position: absolute;
+          top: 100%;
+          color: black;
+          background-color: white;
+          border: 1px solid;
+          width: fit-content;
+          padding: 3px;
+          z-index: 10;     
+        } */
   }
