Modify custom.css and post.html
Add js for h3 and h4 elements in post.html. Test active selector in css

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,6 +48,12 @@
             
             Array.from(document.querySelectorAll('div.translate span[title]'))
                 .forEach(node=>node.setAttribute('tabindex', '0'))
+            
+            Array.from(document.querySelectorAll('h3[title]'))
+                .forEach(node=>node.setAttribute('tabindex', '0'))
+            
+            Array.from(document.querySelectorAll('h4[title]'))
+                .forEach(node=>node.setAttribute('tabindex', '0'))
             </script>
         </div>
 
