--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -20,10 +20,10 @@ img {
       display: inline-flex;
       justify-content: center; 
     }
-    [title]:focus {
+    [title]:active {
       color: seagreen; 
     }
-    [title]:focus::after {
+    [title]:active::after {
       content: attr(title);
       position: absolute;
       top: 100%;
@@ -34,7 +34,7 @@ img {
       padding: 3px;
       z-index: 10;     
     }
-    /* h3[title] {
+    h3[title] {
         color: red;
         position: relative;
         display: inline-flex;
@@ -53,5 +53,5 @@ img {
           width: fit-content;
           padding: 3px;
           z-index: 10;     
-        } */
+        }
   }
