Modify index and README.md
Add information on touchscreen functions. Test display of footer info

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,8 +56,8 @@
                 .forEach(node=>node.setAttribute('tabindex', '0'))
             </script>
         </div>
-
+        <div>    
         {%- include footer.html -%}
-
+        </div>
     </body>
 </html>
