Add rss/atom feed button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 <html lang="en" >
     <head>
         <!-- <link rel="stylesheet" href="assets/css/custom.css"> -->
-        
+        <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
         {%- include head.html -%}
 
         {% if page.previous %}
