Add rss link to head.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,3 +33,5 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{site.baseurl}}/gitbook/images/apple-touch-icon-precomposed-152.png">
 <link rel="shortcut icon" href="{{site.baseurl}}/gitbook/images/favicon.ico" type="image/x-icon">
+
+<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml">
