--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,8 @@
     <meta name="author" content="{{ site.author | escape }}">
 {%- endif -%}
 
+<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
+
 <link rel="stylesheet" href="assets/css/custom.css">
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/style.css">
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-fontsettings/website.css">
@@ -33,5 +35,3 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{site.baseurl}}/gitbook/images/apple-touch-icon-precomposed-152.png">
 <link rel="shortcut icon" href="{{site.baseurl}}/gitbook/images/favicon.ico" type="image/x-icon">
-
-<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}/feed.xml">
