--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en" >
     <head>
-        <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml">
+        <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
         {%- include head.html -%}
 
         {% assign reversed_posts = site.posts | reverse %}
