--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
     <meta name="author" content="{{ site.author | escape }}">
 {%- endif -%}
 
-<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml">
+<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.baseurl }}/feed.xml">
 
 <link rel="stylesheet" href="assets/css/custom.css">
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/style.css">
